<resources>
    <string name="app_name">AppGym</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_menu">Menu</string>
    <string name="label_class">Classes</string>
    <string name="label_day">Day</string>
    <string name="label_hour">Hour</string>
    <string name="label_profile">Profile</string>
    <string name="label_competitions">Events</string>
    <string name="classes_menu">CLASSES</string>
    <string name="competitions_menu">EVENTS</string>
    <string name="profile_menu">PROFILE</string>
    <string name="name_profile_text">Name:</string>
    <string name="surname_profile_text">Surname:</string>
    <string name="date_of_birth_profile_text">Date of birth:</string>
    <string name="height_profile_text">Height:</string>
    <string name="weight_profile_text">Weight:</string>
    <string name="cm_profile_text">cm</string>
    <string name="kg_profile_text">Kg</string>
    <string name="email_profile_text">email</string>
    <string name="phone_profile_text">Phone:</string>
    <string name="sex_profile_text">Sex:</string>
    <string name="class_one">BODY PUMP</string>
    <string name="capacity_one_class_one">%s/25</string>
    <string name="capacity_two_class_one">%s/25</string>
    <string name="boxing_classes_text">BOXING</string>
    <string name="day_one_class_one">MONDAY</string>
    <string name="hour_one_class_one">10:00</string>
    <string name="day_two_class_one">WEDNESDAY</string>
    <string name="hour_two_class_one">16:00</string>
    <string name="class_two">BOXING</string>
    <string name="day_one_class_two">TUESDAY</string>
    <string name="hour_one_class_two">11:00</string>
    <string name="capacity_one_class_two">9/25</string>
    <string name="day_two_class_two">FRIDAY</string>
    <string name="hour_two_class_two">17:00</string>
    <string name="capacity_two_class_two">7/25</string>
    <string name="class_three">YOGA</string>
    <string name="day_one_class_three">MONDAY</string>
    <string name="hour_one_class_three">12:00</string>
    <string name="capacity_one_class_three">25/25</string>
    <string name="day_two_class_three">THURSDAY</string>
    <string name="hour_two_class_three">18:00</string>
    <string name="capacity_two_class_three">10/25</string>
    <string name="class_four">PILATES</string>
    <string name="day_one_class_four">WEDNESDAY</string>
    <string name="hour_one_class_four">12:00</string>
    <string name="capacity_one_class_four">18/25</string>
    <string name="day_two_class_four">FRIDAY</string>
    <string name="hour_two_class_four">19:00</string>
    <string name="capacity_two_class_four">22/25</string>
    <string name="save_button_text">SAVE</string>
    <string name="female_sex_text">Female</string>
    <string name="male_sex_text">Male</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in_button_text">LOG IN</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="date_event">Date: %1$s</string>
    <string name="level_event">Difficulty: %1$s</string>
    <string name="place_event">Place: %1$s</string>
    <string name="contact_event">Contact: %1$s</string>
    <string name="error">ERROR</string>
    <string name="full_reservations">The class is full</string>
    <string name="exit_dialog">close</string>

</resources>